--- a/src/main/resources/statistics.html
+++ b/src/main/resources/statistics.html
@@ -6,6 +6,13 @@
 </head>
 <body>
 
+<div>
+    Time: {TIME_IN_MS} ms
+</div>
+<div>
+    Files parsed: {FILES_PARSED}
+</div>
+
 <div style="display: inline-block; width: 45%">
 <h1>Best files by Human</h1>
 <table>
